@@ -70,7 +70,11 @@ globalG = spm_global(VG);
 VF.pinfo(1:2,:) = globalG/globalF*VF.pinfo(1:2);
 
 ll = Inf;
-spm_plot_convergence('Init','Bias Correction','- Log-likelihood','Iteration');
+try
+    spm_plot_convergence('Init','Bias Correction','- Log-likelihood','Iteration');
+catch
+    spm_chi2_plot('Init','Bias Correction','- Log-likelihood','Iteration');
+end
 for subit=1:nits,
 
     % Compute objective function and its 1st and second derivatives
@@ -122,8 +126,11 @@ for subit=1:nits,
         Beta  = Beta  + kron(b3,spm_krutil(wt1,B1bias,B2bias,0));
         Alpha = Alpha + kron(b3*b3',spm_krutil(wt2,B1bias,B2bias,1));
     end;
-    spm_plot_convergence('Set',ll/prod(d));
-
+    try
+        spm_plot_convergence('Set',ll/prod(d));
+    catch
+        spm_chi2_plot('Set',ll/prod(d));
+    end
 
     if subit > 1 && ll>oll,
         % Hasn't improved, so go back to previous solution
